# OOT_GNURadio_Eddy

./: PROMPTS_CHATGPT  Resumen_Comandos_Git.txt  gr_modtool_instruction
apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
grc/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  howto_decimate_fir_cc.xml  howto_detector_exp_ff.xml  howto_detector_ff.xml  howto_downsample_cc.xml  howto_dual_decimate_ff.xml  howto_flex_fir_cc.xml  howto_flex_fir_cf.xml  howto_flex_fir_ff.xml  howto_gain_ff.xml  howto_gate_ff.xml  howto_iq_mag_cf.xml  howto_iq_select_cf.xml  howto_moving_avg_ff.xml  howto_moving_avg_history_ff.xml
include/howto/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  decimate_fir_cc.h  detector_exp_ff.h  detector_ff.h  downsample_cc.h  dual_decimate_ff.h  flex_fir_cc.h  flex_fir_cf.h  flex_fir_common.h  flex_fir_ff.h  gain_ff.h  gate_ff.h  iq_mag_cf.h  iq_select_cf.h  moving_avg_ff.h  moving_avg_history_ff.h  square_ff.h
lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  decimate_fir_cc_impl.cc  decimate_fir_cc_impl.h  detector_exp_ff_impl.cc  detector_exp_ff_impl.h  detector_ff_impl.cc  detector_ff_impl.h  downsample_cc_impl.cc  downsample_cc_impl.h  dual_decimate_ff_impl.cc  dual_decimate_ff_impl.h  flex_fir_all.cc  flex_fir_cc_impl.cc  flex_fir_cc_impl.h  flex_fir_cf_impl.cc  flex_fir_cf_impl.h  flex_fir_ff_impl.cc  flex_fir_ff_impl.h  flex_fir_impl_base.h  flex_fir_kernel.cc  gain_ff_impl.cc  gain_ff_impl.h  gate_ff_impl.cc  gate_ff_impl.h  iq_mag_cf_impl.cc  iq_mag_cf_impl.h  iq_select_cf_impl.cc  iq_select_cf_impl.h  moving_avg_ff_impl.cc  moving_avg_ff_impl.h  moving_avg_history_ff_impl.cc  moving_avg_history_ff_impl.h  square_ff_impl.cc  square_ff_impl.h  test_howto_test.sh
python/: CMakeLists.txt  qa_decimate_fir_cc.py  qa_detector_ff.py  qa_downsample_cc.py  qa_dual_decimate_ff.py  qa_flex_fir.py  qa_gain_ff.py  qa_iq_mag_cf.py  qa_iq_select_cf.py  qa_moving_avg_ff.py  qa_moving_avg_history_ff.py  qa_square_ff.py
swig/: CTestTestfile.cmake  Makefile  _howto_swig_swig_tag  cmake_install.cmake  howto_swig.i  howto_swig.py  howto_swig.pyo  howto_swigPYTHON_wrap.cxx  howto_swig_swig_2d0df
