# Copyright 2011 Free Software Foundation, Inc.
#
# This file is part of GNU Radio
#
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
install(FILES
    howto_square_ff.xml
    howto_gain_ff.xml
    howto_moving_avg_ff.xml 
    howto_moving_avg_history_ff.xml
    howto_iq_mag_cf.xml
    howto_iq_select_cf.xml
    howto_flex_fir_ff.xml
    howto_flex_fir_cc.xml
    howto_flex_fir_cf.xml
    DESTINATION share/gnuradio/grc/blocks
)
